Fix component alignment issues

--- a/src/components/button-group/index.scss
+++ b/src/components/button-group/index.scss
@@ -1,7 +1,8 @@
 @import '../../_shared/_variables';
 
 .cui-button-group {
-	display: inline-flex;
+  display: inline-flex;
+  vertical-align: middle;
 
   .cui-button {
 		flex: 1 0 auto;
