--- a/src/components/control-group/index.scss
+++ b/src/components/control-group/index.scss
@@ -2,6 +2,7 @@
 
 .cui-control-group {
   display: inline-flex;
+  vertical-align: middle;
   margin-right: $cui-base-size;
 
   &:last-child {
